<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>woowa</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>asciidoctor-maven-plugin</artifactId>
        <dependencies>
          <dependency>
            <artifactId>spring-restdocs-asciidoctor</artifactId>
            <groupId>org.springframework.restdocs</groupId>
            <version>${spring-restdocs.version}</version>
          </dependency>

        </dependencies>
        <executions>
          <execution>
            <configuration>
              <backend>html</backend>
              <doctype>book</doctype>
            </configuration>
            <goals>
              <goal>process-asciidoc</goal>
            </goals>
            <id>generate-docs</id>
            <phase>prepare-package</phase>
          </execution>
        </executions>
        <groupId>org.asciidoctor</groupId>
        <version>1.5.8</version>

      </plugin>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <artifactId>mapstruct-processor</artifactId>
              <groupId>org.mapstruct</groupId>
              <version>${org.mapstruct.version}</version>
            </path>
            <path>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>${org.projectlombok.version}</version>
            </path>

            <!-- additional annotation processor required as of Lombok 1.18.16 -->
            <path>
              <artifactId>lombok-mapstruct-binding</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>0.1.0</version>
            </path>
          </annotationProcessorPaths>
          <source>11</source>
          <target>11</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.8.1</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>mysql-connector-java</artifactId>
      <groupId>mysql</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-restdocs-mockmvc</artifactId>
      <groupId>org.springframework.restdocs</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <dependency>
      <artifactId>mapstruct</artifactId>
      <groupId>org.mapstruct</groupId>
      <version>${org.mapstruct.version}</version>
    </dependency>
    <!-- lombok dependency should not end up on classpath -->
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>${org.projectlombok.version}</version>
    </dependency>
  </dependencies>
  <description>woowa</description>
  <groupId>com.example</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>woowa</name>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>2.7.0</version> <!-- lookup parent from repository -->
  </parent>
  <properties>
    <java.version>11</java.version>
    <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
    <org.projectlombok.version>1.18.16</org.projectlombok.version>
  </properties>

  <version>0.0.1-SNAPSHOT</version>

</project>
